fixed overflow x

--- a/responsive.css
+++ b/responsive.css
@@ -15,8 +15,9 @@
     .container{
         padding: 2rem;
     }
-    hr{
-        right: 2rem;
+    .project-sec{
+        padding: 2rem;
+        margin: 0 -2rem;
     }
 }
 
@@ -29,5 +30,19 @@
 @media screen and (width <= 530px) {
     .proj-h2{
         font-size: 32px;
+    }
+    .proj-h1{
+        font-size: 48px;
+        margin-top: 2rem;
+    }
+}
+@media screen and (width <= 430px) {
+    .container{
+        padding: 1.2rem;
+        padding-top: 2rem;
+    }
+    .project-sec {
+        padding: 1.2rem;
+        margin: 0 -1.2rem;
     }
 }
